# dm-low-power-wireless-sensors-examples-for-mcxw23

./: COPYING-BSD-3  License.txt  README.md  SW-Content-Register.txt  dm-low-power-sensors-examples-for-mcxw23.xml
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/: CMakeLists.txt  build_all.bat  config.cmake  mcux_config.h
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/examples/_boards/frdmmcxw23/: board.c  board.h  frdm_stbi_a8974_shield.h  issdk_hal.h
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/examples/_boards/frdmmcxw23/wireless_examples/: pin_mux.c
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/examples/_boards/frdmmcxw23/wireless_examples/linker/gcc/: connectivity_ble.ld
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/examples/_common/project_segments/wireless/mcxw23/components/: board_comp.c  board_comp.h
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/interfaces/: register_io_i2c.c
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/middleware/wireless/ble_controller/interface/snps_controller/ble_controller/: hci.h
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/middleware/wireless/ble_controller/interface/snps_controller/shrd_utils/: bsp.h  event_manager.h  ll_mem.h  os_wrapper.h  power_table.h
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/middleware/wireless/bluetooth/application/common/: app_conn.c  app_conn.h  app_connection.c  app_scanner.c  ble_init.h
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/middleware/wireless/bluetooth/boards/frdmmcxw23/: app_preinclude.h
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/middleware/wireless/bluetooth/examples/w_uart/: app_config.c  wireless_uart.c
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/middleware/wireless/bluetooth/host/config/: ble_config.h  ble_globals.c
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/middleware/wireless/bluetooth/host/interface/: gap_handover_interface.h  gap_handover_types.h  gap_interface.h  hci_handover_interface.h
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/middleware/wireless/bluetooth/port/: fwk_timer_manager.c
sensors_examples_for_mcxw23/frmdmcxw23_fxls8974cf_motion_wakeup_ble/sensors/: fxls8974_drv.c  fxls89xx_motion_wakeup.h
sensors_examples_for_mcxw23/frmdmcxw23_mpl3115_pressure_wakeup_ble/: CMakeLists.txt  FreeRTOSConfig_Gen.h  build_debug.sh
sensors_examples_for_mcxw23/frmdmcxw23_mpl3115_pressure_wakeup_ble/examples/_boards/frdmmcxw23/: clock_config.h  issdk_hal.h  mpl3115_board.h
sensors_examples_for_mcxw23/frmdmcxw23_mpl3115_pressure_wakeup_ble/examples/_boards/frdmmcxw23/wireless_examples/: pin_mux.h
sensors_examples_for_mcxw23/frmdmcxw23_mpl3115_pressure_wakeup_ble/middleware/wireless/bluetooth/application/common/: app_nvm.c  ble_init.c
sensors_examples_for_mcxw23/frmdmcxw23_mpl3115_pressure_wakeup_ble/middleware/wireless/bluetooth/examples/w_uart/: app_config.c  wireless_uart.c
sensors_examples_for_mcxw23/frmdmcxw23_mpl3115_pressure_wakeup_ble/middleware/wireless/bluetooth/host/interface/: ble_general.h  gap_ids_interface.h  hci_handover_types.h  hci_interface.h  hci_types.h
sensors_examples_for_mcxw23/frmdmcxw23_mpl3115_pressure_wakeup_ble/sensors/: mpl3115.h  mpl3115_drv.c  mpl3115_drv.h  mpl3115_pressure_wakeup.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/: CMakeLists.txt  build_all.sh  build_debug.bat  clean.bat  clean.sh  flags.cmake  mcux_include.json
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/drivers/cmsis/: fsl_i2c_cmsis.c
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/examples/_boards/frdmmcxw23/: RTE_Device.h  clock_config.c  frdmmcxw23x.h  issdk_hal.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/examples/_boards/frdmmcxw23/wireless_examples/: board_platform.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/examples/_common/project_segments/wireless/mcxw23/app_common/: app_ble_init.c
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/interfaces/: register_io_spi.c
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/ble_controller/interface/: controller_interface.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/ble_controller/interface/snps_controller/ble_controller/: ll_error.h  ll_intf.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/ble_controller/interface/snps_controller/sdk_integration/nxp_hoststack_adapter/: nxp_hoststack_adapter.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/ble_controller/interface/snps_controller/shrd_utils/: hci_transport.h  mem_intf.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/bluetooth/application/common/: app_advertiser.c  app_advertiser.h  ble_conn_manager.c
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/bluetooth/application/common/freertos/: main.c
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/bluetooth/boards/frdmmcxw23/: app_preinclude_common.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/bluetooth/examples/w_uart/: app_config.c  wireless_uart.c
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/bluetooth/host/interface/: ble_sig_defines.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/bluetooth/port/: fwk_os_abs.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/middleware/wireless/framework/platform/wireless_mcu/: fwk_platform_ot.h
sensors_examples_for_mcxw23/frmdmcxw23_nmh1000_mag_wakeup_ble/sensors/: nmh1000_mag_wakeup.h
(+12 files in other folders)
